// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`login form on login fail should render without crashing 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Login
    emailError="error"
    errors={Object {}}
    generalError="error"
    onSubmit={[MockFunction]}
    passwordError="error"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="col-md-12"
      >
        <h3>
          Author's Haven
        </h3>
        <form
          onSubmit={[MockFunction]}
        >
          <div
            className="form-group"
          >
            <label
              htmlFor="email"
            >
              Email Address
            </label>
            <InputField
              className="form-control"
              name="email"
              placeholder="enter email"
              type="email"
            />
            <div>
              <ErrorMessage />
            </div>
          </div>
          <div
            className="form-group"
          >
            <label
              htmlFor="password"
            >
              Password
            </label>
            <InputField
              className="form-control"
              name="password"
              placeholder="enter password"
              type="Password"
            />
            <div>
              <ErrorMessage />
            </div>
          </div>
          <Button
            className="btn btn-primary"
            id="login-button"
            text="Login"
            type="submit"
          />
          <div
            className="form-group"
          >
            <div
              className="row"
            >
              <div
                className="col-md-6"
              >
                <Button
                  className="text-primary float-left"
                  id="register"
                  text="Create an Account"
                />
              </div>
              <div
                className="col-md-6"
              >
                <Button
                  className="text-primary float-right"
                  id="reset-password"
                  text="Forgot Password?"
                />
              </div>
            </div>
          </div>
          <div>
            <p
              className="text-danger"
            />
          </div>
        </form>
      </div>,
      "className": "login-wrapper",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h3>
            Author's Haven
          </h3>,
          <form
            onSubmit={[MockFunction]}
          >
            <div
              className="form-group"
            >
              <label
                htmlFor="email"
              >
                Email Address
              </label>
              <InputField
                className="form-control"
                name="email"
                placeholder="enter email"
                type="email"
              />
              <div>
                <ErrorMessage />
              </div>
            </div>
            <div
              className="form-group"
            >
              <label
                htmlFor="password"
              >
                Password
              </label>
              <InputField
                className="form-control"
                name="password"
                placeholder="enter password"
                type="Password"
              />
              <div>
                <ErrorMessage />
              </div>
            </div>
            <Button
              className="btn btn-primary"
              id="login-button"
              text="Login"
              type="submit"
            />
            <div
              className="form-group"
            >
              <div
                className="row"
              >
                <div
                  className="col-md-6"
                >
                  <Button
                    className="text-primary float-left"
                    id="register"
                    text="Create an Account"
                  />
                </div>
                <div
                  className="col-md-6"
                >
                  <Button
                    className="text-primary float-right"
                    id="reset-password"
                    text="Forgot Password?"
                  />
                </div>
              </div>
            </div>
            <div>
              <p
                className="text-danger"
              />
            </div>
          </form>,
        ],
        "className": "col-md-12",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Author's Haven",
          },
          "ref": null,
          "rendered": "Author's Haven",
          "type": "h3",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="form-group"
              >
                <label
                  htmlFor="email"
                >
                  Email Address
                </label>
                <InputField
                  className="form-control"
                  name="email"
                  placeholder="enter email"
                  type="email"
                />
                <div>
                  <ErrorMessage />
                </div>
              </div>,
              <div
                className="form-group"
              >
                <label
                  htmlFor="password"
                >
                  Password
                </label>
                <InputField
                  className="form-control"
                  name="password"
                  placeholder="enter password"
                  type="Password"
                />
                <div>
                  <ErrorMessage />
                </div>
              </div>,
              <Button
                className="btn btn-primary"
                id="login-button"
                text="Login"
                type="submit"
              />,
              <div
                className="form-group"
              >
                <div
                  className="row"
                >
                  <div
                    className="col-md-6"
                  >
                    <Button
                      className="text-primary float-left"
                      id="register"
                      text="Create an Account"
                    />
                  </div>
                  <div
                    className="col-md-6"
                  >
                    <Button
                      className="text-primary float-right"
                      id="reset-password"
                      text="Forgot Password?"
                    />
                  </div>
                </div>
              </div>,
              <div>
                <p
                  className="text-danger"
                />
              </div>,
            ],
            "onSubmit": [MockFunction],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <label
                    htmlFor="email"
                  >
                    Email Address
                  </label>,
                  <InputField
                    className="form-control"
                    name="email"
                    placeholder="enter email"
                    type="email"
                  />,
                  <div>
                    <ErrorMessage />
                  </div>,
                ],
                "className": "form-group",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Email Address",
                    "htmlFor": "email",
                  },
                  "ref": null,
                  "rendered": "Email Address",
                  "type": "label",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "className": "form-control",
                    "name": "email",
                    "placeholder": "enter email",
                    "type": "email",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <ErrorMessage />,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "text": undefined,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": "div",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <label
                    htmlFor="password"
                  >
                    Password
                  </label>,
                  <InputField
                    className="form-control"
                    name="password"
                    placeholder="enter password"
                    type="Password"
                  />,
                  <div>
                    <ErrorMessage />
                  </div>,
                ],
                "className": "form-group",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Password",
                    "htmlFor": "password",
                  },
                  "ref": null,
                  "rendered": "Password",
                  "type": "label",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "className": "form-control",
                    "name": "password",
                    "placeholder": "enter password",
                    "type": "Password",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <ErrorMessage />,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "text": undefined,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": "div",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "className": "btn btn-primary",
                "id": "login-button",
                "isProcessing": undefined,
                "text": "Login",
                "type": "submit",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="row"
                >
                  <div
                    className="col-md-6"
                  >
                    <Button
                      className="text-primary float-left"
                      id="register"
                      text="Create an Account"
                    />
                  </div>
                  <div
                    className="col-md-6"
                  >
                    <Button
                      className="text-primary float-right"
                      id="reset-password"
                      text="Forgot Password?"
                    />
                  </div>
                </div>,
                "className": "form-group",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <div
                      className="col-md-6"
                    >
                      <Button
                        className="text-primary float-left"
                        id="register"
                        text="Create an Account"
                      />
                    </div>,
                    <div
                      className="col-md-6"
                    >
                      <Button
                        className="text-primary float-right"
                        id="reset-password"
                        text="Forgot Password?"
                      />
                    </div>,
                  ],
                  "className": "row",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <Button
                        className="text-primary float-left"
                        id="register"
                        text="Create an Account"
                      />,
                      "className": "col-md-6",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "className": "text-primary float-left",
                        "id": "register",
                        "onClick": undefined,
                        "text": "Create an Account",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": "div",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <Button
                        className="text-primary float-right"
                        id="reset-password"
                        text="Forgot Password?"
                      />,
                      "className": "col-md-6",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "className": "text-primary float-right",
                        "id": "reset-password",
                        "onClick": undefined,
                        "text": "Forgot Password?",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": "div",
                  },
                ],
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <p
                  className="text-danger"
                />,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                  "className": "text-danger",
                },
                "ref": null,
                "rendered": null,
                "type": "p",
              },
              "type": "div",
            },
          ],
          "type": "form",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="col-md-12"
        >
          <h3>
            Author's Haven
          </h3>
          <form
            onSubmit={[MockFunction]}
          >
            <div
              className="form-group"
            >
              <label
                htmlFor="email"
              >
                Email Address
              </label>
              <InputField
                className="form-control"
                name="email"
                placeholder="enter email"
                type="email"
              />
              <div>
                <ErrorMessage />
              </div>
            </div>
            <div
              className="form-group"
            >
              <label
                htmlFor="password"
              >
                Password
              </label>
              <InputField
                className="form-control"
                name="password"
                placeholder="enter password"
                type="Password"
              />
              <div>
                <ErrorMessage />
              </div>
            </div>
            <Button
              className="btn btn-primary"
              id="login-button"
              text="Login"
              type="submit"
            />
            <div
              className="form-group"
            >
              <div
                className="row"
              >
                <div
                  className="col-md-6"
                >
                  <Button
                    className="text-primary float-left"
                    id="register"
                    text="Create an Account"
                  />
                </div>
                <div
                  className="col-md-6"
                >
                  <Button
                    className="text-primary float-right"
                    id="reset-password"
                    text="Forgot Password?"
                  />
                </div>
              </div>
            </div>
            <div>
              <p
                className="text-danger"
              />
            </div>
          </form>
        </div>,
        "className": "login-wrapper",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h3>
              Author's Haven
            </h3>,
            <form
              onSubmit={[MockFunction]}
            >
              <div
                className="form-group"
              >
                <label
                  htmlFor="email"
                >
                  Email Address
                </label>
                <InputField
                  className="form-control"
                  name="email"
                  placeholder="enter email"
                  type="email"
                />
                <div>
                  <ErrorMessage />
                </div>
              </div>
              <div
                className="form-group"
              >
                <label
                  htmlFor="password"
                >
                  Password
                </label>
                <InputField
                  className="form-control"
                  name="password"
                  placeholder="enter password"
                  type="Password"
                />
                <div>
                  <ErrorMessage />
                </div>
              </div>
              <Button
                className="btn btn-primary"
                id="login-button"
                text="Login"
                type="submit"
              />
              <div
                className="form-group"
              >
                <div
                  className="row"
                >
                  <div
                    className="col-md-6"
                  >
                    <Button
                      className="text-primary float-left"
                      id="register"
                      text="Create an Account"
                    />
                  </div>
                  <div
                    className="col-md-6"
                  >
                    <Button
                      className="text-primary float-right"
                      id="reset-password"
                      text="Forgot Password?"
                    />
                  </div>
                </div>
              </div>
              <div>
                <p
                  className="text-danger"
                />
              </div>
            </form>,
          ],
          "className": "col-md-12",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Author's Haven",
            },
            "ref": null,
            "rendered": "Author's Haven",
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="form-group"
                >
                  <label
                    htmlFor="email"
                  >
                    Email Address
                  </label>
                  <InputField
                    className="form-control"
                    name="email"
                    placeholder="enter email"
                    type="email"
                  />
                  <div>
                    <ErrorMessage />
                  </div>
                </div>,
                <div
                  className="form-group"
                >
                  <label
                    htmlFor="password"
                  >
                    Password
                  </label>
                  <InputField
                    className="form-control"
                    name="password"
                    placeholder="enter password"
                    type="Password"
                  />
                  <div>
                    <ErrorMessage />
                  </div>
                </div>,
                <Button
                  className="btn btn-primary"
                  id="login-button"
                  text="Login"
                  type="submit"
                />,
                <div
                  className="form-group"
                >
                  <div
                    className="row"
                  >
                    <div
                      className="col-md-6"
                    >
                      <Button
                        className="text-primary float-left"
                        id="register"
                        text="Create an Account"
                      />
                    </div>
                    <div
                      className="col-md-6"
                    >
                      <Button
                        className="text-primary float-right"
                        id="reset-password"
                        text="Forgot Password?"
                      />
                    </div>
                  </div>
                </div>,
                <div>
                  <p
                    className="text-danger"
                  />
                </div>,
              ],
              "onSubmit": [MockFunction],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <label
                      htmlFor="email"
                    >
                      Email Address
                    </label>,
                    <InputField
                      className="form-control"
                      name="email"
                      placeholder="enter email"
                      type="email"
                    />,
                    <div>
                      <ErrorMessage />
                    </div>,
                  ],
                  "className": "form-group",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Email Address",
                      "htmlFor": "email",
                    },
                    "ref": null,
                    "rendered": "Email Address",
                    "type": "label",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "className": "form-control",
                      "name": "email",
                      "placeholder": "enter email",
                      "type": "email",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <ErrorMessage />,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "text": undefined,
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": "div",
                  },
                ],
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <label
                      htmlFor="password"
                    >
                      Password
                    </label>,
                    <InputField
                      className="form-control"
                      name="password"
                      placeholder="enter password"
                      type="Password"
                    />,
                    <div>
                      <ErrorMessage />
                    </div>,
                  ],
                  "className": "form-group",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Password",
                      "htmlFor": "password",
                    },
                    "ref": null,
                    "rendered": "Password",
                    "type": "label",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "className": "form-control",
                      "name": "password",
                      "placeholder": "enter password",
                      "type": "Password",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <ErrorMessage />,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "text": undefined,
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": "div",
                  },
                ],
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "className": "btn btn-primary",
                  "id": "login-button",
                  "isProcessing": undefined,
                  "text": "Login",
                  "type": "submit",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="row"
                  >
                    <div
                      className="col-md-6"
                    >
                      <Button
                        className="text-primary float-left"
                        id="register"
                        text="Create an Account"
                      />
                    </div>
                    <div
                      className="col-md-6"
                    >
                      <Button
                        className="text-primary float-right"
                        id="reset-password"
                        text="Forgot Password?"
                      />
                    </div>
                  </div>,
                  "className": "form-group",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <div
                        className="col-md-6"
                      >
                        <Button
                          className="text-primary float-left"
                          id="register"
                          text="Create an Account"
                        />
                      </div>,
                      <div
                        className="col-md-6"
                      >
                        <Button
                          className="text-primary float-right"
                          id="reset-password"
                          text="Forgot Password?"
                        />
                      </div>,
                    ],
                    "className": "row",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <Button
                          className="text-primary float-left"
                          id="register"
                          text="Create an Account"
                        />,
                        "className": "col-md-6",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "function",
                        "props": Object {
                          "className": "text-primary float-left",
                          "id": "register",
                          "onClick": undefined,
                          "text": "Create an Account",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                      "type": "div",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <Button
                          className="text-primary float-right"
                          id="reset-password"
                          text="Forgot Password?"
                        />,
                        "className": "col-md-6",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "function",
                        "props": Object {
                          "className": "text-primary float-right",
                          "id": "reset-password",
                          "onClick": undefined,
                          "text": "Forgot Password?",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                      "type": "div",
                    },
                  ],
                  "type": "div",
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <p
                    className="text-danger"
                  />,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": undefined,
                    "className": "text-danger",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "p",
                },
                "type": "div",
              },
            ],
            "type": "form",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`login form on login success should render without crashing 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Login
    emailError=""
    errors={null}
    generalError=""
    onPassword={[MockFunction]}
    onRegister={[MockFunction]}
    onSubmit={[MockFunction]}
    passwordError=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="col-md-12"
      >
        <h3>
          Author's Haven
        </h3>
        <form
          onSubmit={[MockFunction]}
        >
          <div
            className="form-group"
          >
            <label
              htmlFor="email"
            >
              Email Address
            </label>
            <InputField
              className="form-control"
              name="email"
              placeholder="enter email"
              type="email"
            />
            <div>
              <ErrorMessage
                text=""
              />
            </div>
          </div>
          <div
            className="form-group"
          >
            <label
              htmlFor="password"
            >
              Password
            </label>
            <InputField
              className="form-control"
              name="password"
              placeholder="enter password"
              type="Password"
            />
            <div>
              <ErrorMessage
                text=""
              />
            </div>
          </div>
          <Button
            className="btn btn-primary"
            id="login-button"
            text="Login"
            type="submit"
          />
          <div
            className="form-group"
          >
            <div
              className="row"
            >
              <div
                className="col-md-6"
              >
                <Button
                  className="text-primary float-left"
                  id="register"
                  onClick={[MockFunction]}
                  text="Create an Account"
                />
              </div>
              <div
                className="col-md-6"
              >
                <Button
                  className="text-primary float-right"
                  id="reset-password"
                  onClick={[MockFunction]}
                  text="Forgot Password?"
                />
              </div>
            </div>
          </div>
          <div>
            <p
              className="text-danger"
            >
              
            </p>
          </div>
        </form>
      </div>,
      "className": "login-wrapper",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h3>
            Author's Haven
          </h3>,
          <form
            onSubmit={[MockFunction]}
          >
            <div
              className="form-group"
            >
              <label
                htmlFor="email"
              >
                Email Address
              </label>
              <InputField
                className="form-control"
                name="email"
                placeholder="enter email"
                type="email"
              />
              <div>
                <ErrorMessage
                  text=""
                />
              </div>
            </div>
            <div
              className="form-group"
            >
              <label
                htmlFor="password"
              >
                Password
              </label>
              <InputField
                className="form-control"
                name="password"
                placeholder="enter password"
                type="Password"
              />
              <div>
                <ErrorMessage
                  text=""
                />
              </div>
            </div>
            <Button
              className="btn btn-primary"
              id="login-button"
              text="Login"
              type="submit"
            />
            <div
              className="form-group"
            >
              <div
                className="row"
              >
                <div
                  className="col-md-6"
                >
                  <Button
                    className="text-primary float-left"
                    id="register"
                    onClick={[MockFunction]}
                    text="Create an Account"
                  />
                </div>
                <div
                  className="col-md-6"
                >
                  <Button
                    className="text-primary float-right"
                    id="reset-password"
                    onClick={[MockFunction]}
                    text="Forgot Password?"
                  />
                </div>
              </div>
            </div>
            <div>
              <p
                className="text-danger"
              >
                
              </p>
            </div>
          </form>,
        ],
        "className": "col-md-12",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Author's Haven",
          },
          "ref": null,
          "rendered": "Author's Haven",
          "type": "h3",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="form-group"
              >
                <label
                  htmlFor="email"
                >
                  Email Address
                </label>
                <InputField
                  className="form-control"
                  name="email"
                  placeholder="enter email"
                  type="email"
                />
                <div>
                  <ErrorMessage
                    text=""
                  />
                </div>
              </div>,
              <div
                className="form-group"
              >
                <label
                  htmlFor="password"
                >
                  Password
                </label>
                <InputField
                  className="form-control"
                  name="password"
                  placeholder="enter password"
                  type="Password"
                />
                <div>
                  <ErrorMessage
                    text=""
                  />
                </div>
              </div>,
              <Button
                className="btn btn-primary"
                id="login-button"
                text="Login"
                type="submit"
              />,
              <div
                className="form-group"
              >
                <div
                  className="row"
                >
                  <div
                    className="col-md-6"
                  >
                    <Button
                      className="text-primary float-left"
                      id="register"
                      onClick={[MockFunction]}
                      text="Create an Account"
                    />
                  </div>
                  <div
                    className="col-md-6"
                  >
                    <Button
                      className="text-primary float-right"
                      id="reset-password"
                      onClick={[MockFunction]}
                      text="Forgot Password?"
                    />
                  </div>
                </div>
              </div>,
              <div>
                <p
                  className="text-danger"
                >
                  
                </p>
              </div>,
            ],
            "onSubmit": [MockFunction],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <label
                    htmlFor="email"
                  >
                    Email Address
                  </label>,
                  <InputField
                    className="form-control"
                    name="email"
                    placeholder="enter email"
                    type="email"
                  />,
                  <div>
                    <ErrorMessage
                      text=""
                    />
                  </div>,
                ],
                "className": "form-group",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Email Address",
                    "htmlFor": "email",
                  },
                  "ref": null,
                  "rendered": "Email Address",
                  "type": "label",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "className": "form-control",
                    "name": "email",
                    "placeholder": "enter email",
                    "type": "email",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <ErrorMessage
                      text=""
                    />,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "text": "",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": "div",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <label
                    htmlFor="password"
                  >
                    Password
                  </label>,
                  <InputField
                    className="form-control"
                    name="password"
                    placeholder="enter password"
                    type="Password"
                  />,
                  <div>
                    <ErrorMessage
                      text=""
                    />
                  </div>,
                ],
                "className": "form-group",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Password",
                    "htmlFor": "password",
                  },
                  "ref": null,
                  "rendered": "Password",
                  "type": "label",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "className": "form-control",
                    "name": "password",
                    "placeholder": "enter password",
                    "type": "Password",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <ErrorMessage
                      text=""
                    />,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "text": "",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": "div",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "className": "btn btn-primary",
                "id": "login-button",
                "isProcessing": undefined,
                "text": "Login",
                "type": "submit",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="row"
                >
                  <div
                    className="col-md-6"
                  >
                    <Button
                      className="text-primary float-left"
                      id="register"
                      onClick={[MockFunction]}
                      text="Create an Account"
                    />
                  </div>
                  <div
                    className="col-md-6"
                  >
                    <Button
                      className="text-primary float-right"
                      id="reset-password"
                      onClick={[MockFunction]}
                      text="Forgot Password?"
                    />
                  </div>
                </div>,
                "className": "form-group",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <div
                      className="col-md-6"
                    >
                      <Button
                        className="text-primary float-left"
                        id="register"
                        onClick={[MockFunction]}
                        text="Create an Account"
                      />
                    </div>,
                    <div
                      className="col-md-6"
                    >
                      <Button
                        className="text-primary float-right"
                        id="reset-password"
                        onClick={[MockFunction]}
                        text="Forgot Password?"
                      />
                    </div>,
                  ],
                  "className": "row",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <Button
                        className="text-primary float-left"
                        id="register"
                        onClick={[MockFunction]}
                        text="Create an Account"
                      />,
                      "className": "col-md-6",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "className": "text-primary float-left",
                        "id": "register",
                        "onClick": [MockFunction],
                        "text": "Create an Account",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": "div",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <Button
                        className="text-primary float-right"
                        id="reset-password"
                        onClick={[MockFunction]}
                        text="Forgot Password?"
                      />,
                      "className": "col-md-6",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "className": "text-primary float-right",
                        "id": "reset-password",
                        "onClick": [MockFunction],
                        "text": "Forgot Password?",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": "div",
                  },
                ],
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <p
                  className="text-danger"
                >
                  
                </p>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "",
                  "className": "text-danger",
                },
                "ref": null,
                "rendered": "",
                "type": "p",
              },
              "type": "div",
            },
          ],
          "type": "form",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="col-md-12"
        >
          <h3>
            Author's Haven
          </h3>
          <form
            onSubmit={[MockFunction]}
          >
            <div
              className="form-group"
            >
              <label
                htmlFor="email"
              >
                Email Address
              </label>
              <InputField
                className="form-control"
                name="email"
                placeholder="enter email"
                type="email"
              />
              <div>
                <ErrorMessage
                  text=""
                />
              </div>
            </div>
            <div
              className="form-group"
            >
              <label
                htmlFor="password"
              >
                Password
              </label>
              <InputField
                className="form-control"
                name="password"
                placeholder="enter password"
                type="Password"
              />
              <div>
                <ErrorMessage
                  text=""
                />
              </div>
            </div>
            <Button
              className="btn btn-primary"
              id="login-button"
              text="Login"
              type="submit"
            />
            <div
              className="form-group"
            >
              <div
                className="row"
              >
                <div
                  className="col-md-6"
                >
                  <Button
                    className="text-primary float-left"
                    id="register"
                    onClick={[MockFunction]}
                    text="Create an Account"
                  />
                </div>
                <div
                  className="col-md-6"
                >
                  <Button
                    className="text-primary float-right"
                    id="reset-password"
                    onClick={[MockFunction]}
                    text="Forgot Password?"
                  />
                </div>
              </div>
            </div>
            <div>
              <p
                className="text-danger"
              >
                
              </p>
            </div>
          </form>
        </div>,
        "className": "login-wrapper",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h3>
              Author's Haven
            </h3>,
            <form
              onSubmit={[MockFunction]}
            >
              <div
                className="form-group"
              >
                <label
                  htmlFor="email"
                >
                  Email Address
                </label>
                <InputField
                  className="form-control"
                  name="email"
                  placeholder="enter email"
                  type="email"
                />
                <div>
                  <ErrorMessage
                    text=""
                  />
                </div>
              </div>
              <div
                className="form-group"
              >
                <label
                  htmlFor="password"
                >
                  Password
                </label>
                <InputField
                  className="form-control"
                  name="password"
                  placeholder="enter password"
                  type="Password"
                />
                <div>
                  <ErrorMessage
                    text=""
                  />
                </div>
              </div>
              <Button
                className="btn btn-primary"
                id="login-button"
                text="Login"
                type="submit"
              />
              <div
                className="form-group"
              >
                <div
                  className="row"
                >
                  <div
                    className="col-md-6"
                  >
                    <Button
                      className="text-primary float-left"
                      id="register"
                      onClick={[MockFunction]}
                      text="Create an Account"
                    />
                  </div>
                  <div
                    className="col-md-6"
                  >
                    <Button
                      className="text-primary float-right"
                      id="reset-password"
                      onClick={[MockFunction]}
                      text="Forgot Password?"
                    />
                  </div>
                </div>
              </div>
              <div>
                <p
                  className="text-danger"
                >
                  
                </p>
              </div>
            </form>,
          ],
          "className": "col-md-12",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Author's Haven",
            },
            "ref": null,
            "rendered": "Author's Haven",
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="form-group"
                >
                  <label
                    htmlFor="email"
                  >
                    Email Address
                  </label>
                  <InputField
                    className="form-control"
                    name="email"
                    placeholder="enter email"
                    type="email"
                  />
                  <div>
                    <ErrorMessage
                      text=""
                    />
                  </div>
                </div>,
                <div
                  className="form-group"
                >
                  <label
                    htmlFor="password"
                  >
                    Password
                  </label>
                  <InputField
                    className="form-control"
                    name="password"
                    placeholder="enter password"
                    type="Password"
                  />
                  <div>
                    <ErrorMessage
                      text=""
                    />
                  </div>
                </div>,
                <Button
                  className="btn btn-primary"
                  id="login-button"
                  text="Login"
                  type="submit"
                />,
                <div
                  className="form-group"
                >
                  <div
                    className="row"
                  >
                    <div
                      className="col-md-6"
                    >
                      <Button
                        className="text-primary float-left"
                        id="register"
                        onClick={[MockFunction]}
                        text="Create an Account"
                      />
                    </div>
                    <div
                      className="col-md-6"
                    >
                      <Button
                        className="text-primary float-right"
                        id="reset-password"
                        onClick={[MockFunction]}
                        text="Forgot Password?"
                      />
                    </div>
                  </div>
                </div>,
                <div>
                  <p
                    className="text-danger"
                  >
                    
                  </p>
                </div>,
              ],
              "onSubmit": [MockFunction],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <label
                      htmlFor="email"
                    >
                      Email Address
                    </label>,
                    <InputField
                      className="form-control"
                      name="email"
                      placeholder="enter email"
                      type="email"
                    />,
                    <div>
                      <ErrorMessage
                        text=""
                      />
                    </div>,
                  ],
                  "className": "form-group",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Email Address",
                      "htmlFor": "email",
                    },
                    "ref": null,
                    "rendered": "Email Address",
                    "type": "label",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "className": "form-control",
                      "name": "email",
                      "placeholder": "enter email",
                      "type": "email",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <ErrorMessage
                        text=""
                      />,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "text": "",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": "div",
                  },
                ],
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <label
                      htmlFor="password"
                    >
                      Password
                    </label>,
                    <InputField
                      className="form-control"
                      name="password"
                      placeholder="enter password"
                      type="Password"
                    />,
                    <div>
                      <ErrorMessage
                        text=""
                      />
                    </div>,
                  ],
                  "className": "form-group",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Password",
                      "htmlFor": "password",
                    },
                    "ref": null,
                    "rendered": "Password",
                    "type": "label",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "className": "form-control",
                      "name": "password",
                      "placeholder": "enter password",
                      "type": "Password",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <ErrorMessage
                        text=""
                      />,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "text": "",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": "div",
                  },
                ],
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "className": "btn btn-primary",
                  "id": "login-button",
                  "isProcessing": undefined,
                  "text": "Login",
                  "type": "submit",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="row"
                  >
                    <div
                      className="col-md-6"
                    >
                      <Button
                        className="text-primary float-left"
                        id="register"
                        onClick={[MockFunction]}
                        text="Create an Account"
                      />
                    </div>
                    <div
                      className="col-md-6"
                    >
                      <Button
                        className="text-primary float-right"
                        id="reset-password"
                        onClick={[MockFunction]}
                        text="Forgot Password?"
                      />
                    </div>
                  </div>,
                  "className": "form-group",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <div
                        className="col-md-6"
                      >
                        <Button
                          className="text-primary float-left"
                          id="register"
                          onClick={[MockFunction]}
                          text="Create an Account"
                        />
                      </div>,
                      <div
                        className="col-md-6"
                      >
                        <Button
                          className="text-primary float-right"
                          id="reset-password"
                          onClick={[MockFunction]}
                          text="Forgot Password?"
                        />
                      </div>,
                    ],
                    "className": "row",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <Button
                          className="text-primary float-left"
                          id="register"
                          onClick={[MockFunction]}
                          text="Create an Account"
                        />,
                        "className": "col-md-6",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "function",
                        "props": Object {
                          "className": "text-primary float-left",
                          "id": "register",
                          "onClick": [MockFunction],
                          "text": "Create an Account",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                      "type": "div",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <Button
                          className="text-primary float-right"
                          id="reset-password"
                          onClick={[MockFunction]}
                          text="Forgot Password?"
                        />,
                        "className": "col-md-6",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "function",
                        "props": Object {
                          "className": "text-primary float-right",
                          "id": "reset-password",
                          "onClick": [MockFunction],
                          "text": "Forgot Password?",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                      "type": "div",
                    },
                  ],
                  "type": "div",
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <p
                    className="text-danger"
                  >
                    
                  </p>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "",
                    "className": "text-danger",
                  },
                  "ref": null,
                  "rendered": "",
                  "type": "p",
                },
                "type": "div",
              },
            ],
            "type": "form",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
